@@ -2,6 +2,7 @@
 * Enhancements
   * Added ability to find Checkbox by :value
   * Added ability to find HiddenField by :value
+  * Added #fire_event method to Element
 === 2016-08-04
 * Enhancements
   * Added ability to find TextField by :title
